lets call it a day

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+MODEL_PROVIDER=DeepSeek # Options: DeepSeek, OpenAI
+MODEL_NAME=deepseek-chat # Options: deepseek-chat, gpt-3.5-turbo, gpt-4, gpt-4-1106-preview, gpt-4-vision-preview
+OPENAI_API_KEY=your-openai-api-key
